# asteroids-rs

./: Cargo.toml  README.md  devenv.nix
locales/: en.yml  fr.yml  pl.yml
src/: asteroid.rs  client.rs  main.rs  particles.rs  player.rs  server.rs  shared.rs  ui.rs
