[package]
name = "asteroids-rs"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["client", "server"]
client = []
server = []

[dependencies]
bevy = { version="0.15", features=["wayland", "dynamic_linking"] }
leafwing-input-manager = { version = "0.16.0" }
strum = { version = "0.26", features = ["derive"] }
rand = "0.9"
bevy_rand = { version = "0.9", features = ["rand_chacha", "wyrand"] }
bevy_prng = { version = "0.9", features = ["rand_chacha", "wyrand"] }
bevy_spatial = "0.10"
bevy_hanabi = "0.14"
bevy_egui = "0.33"
bevy-inspector-egui = "0.29"
rust-i18n = "3.1"
lightyear = {version = "0.19", features = ["leafwing"]}
serde = "1.0"
